bauer/tests/ui/doc-no-non-doc.fail.stderr
error: Only `doc` attributes are supported here
 --> tests/ui/doc-no-non-doc.fail.rs:4:17
  |
4 | #[builder(doc(#[not_doc_attribute = "foo"]))]
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused variable: `field_a`
 --> tests/ui/doc-no-non-doc.fail.rs:6:5
  |
6 |     field_a: u32,
  |     ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_field_a`
  |
  = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
